
[gd_scene load_steps=4 format=3 uid="uid://dlrbxtqn0y3jm"]

[ext_resource type="Texture2D" uid="uid://dxb67a31ph2kf" path="res://Sprites/stone1c.jpg" id="1_fvw3u"]
[ext_resource type="Script" path="res://Scenes/game.gd" id="1_h127a"]

[ext_resource type="PackedScene" uid="uid://cek5sqgdxjiga" path="res://Scenes/player.tscn" id="2_ul243"]
[ext_resource type="Texture2D" uid="uid://c53h581wb5u0x" path="res://Sprites/Desert Tileset.png" id="3_apitf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ff2i"]
texture = ExtResource("3_apitf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
11:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
14:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
21:3/0 = 0
22:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
30:3/0 = 0
31:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
21:4/0 = 0
22:4/0 = 0
24:4/0 = 0
26:4/0 = 0
28:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
21:5/0 = 0
22:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
28:5/0 = 0
30:5/0 = 0
31:5/0 = 0
33:5/0 = 0
34:5/0 = 0
0:6/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
28:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
0:7/0 = 0
1:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
28:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
28:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
30:9/0 = 0
31:9/0 = 0
33:9/0 = 0
34:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
30:10/0 = 0
31:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
5:12/0 = 0
6:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
0:13/0 = 0
1:13/0 = 0
5:13/0 = 0
6:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
15:13/0 = 0
22:13/0 = 0
23:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
0:14/0 = 0
1:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
15:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
0:15/0 = 0
1:15/0 = 0
10:15/0 = 0
11:15/0 = 0
15:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0

[sub_resource type="TileSet" id="TileSet_yi720"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
sources/2 = SubResource("TileSetAtlasSource_6ff2i")

[sub_resource type="Curve2D" id="Curve2D_q0mph"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 640, 360, 0, 0, 0, 0, 3288, 360, 0, 0, 0, 0, 3288, 1920, 0, 0, 0, 0, 640, 1920, 0, 0, 0, 0, 640, 360, 0, 0, 0, 0, 1280, 736, 0, 0, 0, 0, 1280, 1464, 0, 0, 0, 0, 2552, 1472, 0, 0, 0, 0, 2552, 736, 0, 0, 0, 0, 1280, 736, 0, 0, 0, 0, 640, 360, 0, 0, 0, 0, 640, 360)
}
point_count = 12

[node name="Game" type="Node2D"]

script = ExtResource("1_h127a")


[node name="SpawnerPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_q0mph")


[node name="characterbody2d" parent="." instance=ExtResource("2_ul243")]

[node name="ProjectileManager" type="Node2D" parent="."]

[connection signal="mana_changed" from="characterbody2d" to="." method="_on_characterbody_2d_mana_changed"]
[connection signal="no_mana" from="characterbody2d" to="." method="_on_characterbody_2d_no_mana"]
[connection signal="projectile_shot" from="characterbody2d" to="." method="_on_characterbody_2d_projectile_shot"]

[node name="SpawnerSpawnLocation" type="PathFollow2D" parent="SpawnerPath"]
position = Vector2(640, 360)

